<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdviceActivity">
    <ImageView
        android:id="@+id/iv_ImageInAdvicePage"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/progressimage"/>
    <TextView
        android:id="@+id/iv_summaryText"
        android:layout_marginTop="20dp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_ImageInAdvicePage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/summaryInAdvicePage"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tv_advice"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_summaryText"
        app:layout_constraintBottom_toTopOf="@+id/btn_checkEvolution"
        android:text="@string/adviceInAdvicePage"
        android:lineSpacingExtra="10dp"/>

    <Button
        android:id="@+id/btn_checkEvolution"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/btn_makePlan"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/btnColor" />

</android.support.constraint.ConstraintLayout>